@@ -31,7 +31,7 @@
 
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.SegmentAllocator;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 import lapack.*;
 import static lapack.lapacke_h.*;
 
@@ -39,11 +39,11 @@ public class TestLapack {
     public static void main(String[] args) {
 
         /* Locals */
-        try (var session = MemorySession.openConfined()) {
-            var A = session.allocateArray(C_DOUBLE,
+        try (var arena = Arena.ofConfined()) {
+            var A = arena.allocateArray(C_DOUBLE,
                     1, 2, 3, 4, 5, 1, 3, 5, 2, 4, 1, 4, 2, 5, 3
             );
-            var b = session.allocateArray(C_DOUBLE,
+            var b = arena.allocateArray(C_DOUBLE,
                     -10, 12, 14, 16, 18, -3, 14, 12, 16, 16
             );
             int info, m, n, lda, ldb, nrhs;
