@@ -32,6 +32,8 @@
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.List;
 import java.lang.foreign.*;
 import libffmpeg.AVCodecContext;
 import libffmpeg.AVFormatContext;
@@ -51,38 +53,57 @@ import static java.lang.foreign.MemorySegment.NULL;
 public class LibffmpegMain {
     private static int NUM_FRAMES_TO_CAPTURE = 5;
 
-    static class ExitException extends RuntimeException {
-        final int exitCode;
-        ExitException(int exitCode, String msg) {
-            super(msg);
-            this.exitCode = exitCode;
+    record Exit(String message, int exitCode) {}
+
+    public static void main(String[] args) {
+        var exit = run(args);
+        System.err.println(exit.message());
+        System.exit(exit.exitCode());
+    }
+
+    private static class ArenaCleanup implements AutoCloseable {
+        private Arena arena = Arena.ofConfined();
+        private final List<Runnable> preCloseActions = new ArrayList<>();
+
+        void addCleanup(Runnable runnable) {
+            preCloseActions.add(runnable);
+        }
+
+        Arena arena() {
+            return arena;
+        }
+
+        @Override
+        public void close() {
+            preCloseActions.forEach(Runnable::run);
+            System.out.println("cleanup done");
+            arena.close();
         }
     }
 
-    public static void main(String[] args) {
+    private static Exit run(String[] args) {
         if (args.length != 1) {
-            System.err.println("please pass a .mp4 file");
-            System.exit(1);
+            return new Exit("please pass a .mp4 file", 1);
         }
 
         av_register_all();
 
-        int exitCode = 0;
         var pCodecCtxOrig = NULL;
         var pCodecCtx = NULL;
         var pFrame = NULL;
         var pFrameRGB = NULL;
         var buffer = NULL;
 
-        try (var session = MemorySession.openConfined()) {
+        try (var arenaCleanup = new ArenaCleanup()) {
+            var arena = arenaCleanup.arena();
             // AVFormatContext *ppFormatCtx;
-            var ppFormatCtx = MemorySegment.allocateNative(C_POINTER, session);
+            var ppFormatCtx = arena.allocate(C_POINTER);
             // char* fileName;
-            var fileName = session.allocateUtf8String(args[0]);
+            var fileName = arena.allocateUtf8String(args[0]);
 
             // open video file
             if (avformat_open_input(ppFormatCtx, fileName, NULL, NULL) != 0) {
-                throw new ExitException(1, "Cannot open " + args[0]);
+                return new Exit("Cannot open " + args[0], 1);
             }
             System.out.println("opened " + args[0]);
             // AVFormatContext *pFormatCtx;
@@ -90,10 +111,11 @@ public class LibffmpegMain {
 
             // Retrieve stream info
             if (avformat_find_stream_info(pFormatCtx, NULL) < 0) {
-                throw new ExitException(1, "Could not find stream information");
+                return new Exit("Could not find stream information", 1);
+
             }
 
-            session.addCloseAction(()-> {
+            arenaCleanup.addCleanup(() -> {
                 // Close the video file
                 avformat_close_input(ppFormatCtx);
             });
@@ -129,13 +151,13 @@ public class LibffmpegMain {
             }
 
             if (videoStream == -1) {
-                throw new ExitException(1, "Didn't find a video stream");
+                return new Exit("Didn't find a video stream", 1);
             } else {
                 System.out.println("Found video stream (index: " + videoStream + ")");
             }
 
             if (pCodec.equals(NULL)) {
-                throw new ExitException(1, "Unsupported codec");
+                return new Exit("Unsupported codec", 1);
             }
 
             // Copy context
@@ -144,12 +166,12 @@ public class LibffmpegMain {
             // AVCodecContext *pCodecCtx;
             pCodecCtx = avcodec_alloc_context3(pCodec);
             if (avcodec_copy_context(pCodecCtx, pCodecCtxOrig) != 0) {
-                throw new ExitException(1, "Cannot copy context");
+                return new Exit("Cannot copy context", 1);
             }
 
             // Open codec
             if (avcodec_open2(pCodecCtx, pCodec, NULL) < 0) {
-                throw new ExitException(1, "Cannot open codec");
+                return new Exit("Cannot open codec", 1);
             }
 
             // Allocate video frame
@@ -167,13 +189,13 @@ public class LibffmpegMain {
 
 
             if (pFrame.equals(NULL)) {
-                throw new ExitException(1, "Cannot allocate frame");
+                return new Exit("Cannot allocate frame", 1);
             }
             if (pFrameRGB.equals(NULL)) {
-                throw new ExitException(1, "Cannot allocate RGB frame");
+                return new Exit("Cannot allocate RGB frame", 1);
             }
             if (buffer.equals(NULL)) {
-                throw new ExitException(1, "cannot allocate buffer");
+                return new Exit("cannot allocate buffer", 1);
             }
 
             // Assign appropriate parts of buffer to image planes in pFrameRGB
@@ -188,9 +210,9 @@ public class LibffmpegMain {
 
             int i = 0;
             // ACPacket packet;
-            var packet = AVPacket.allocate(session);
+            var packet = AVPacket.allocate(arena);
             // int* pFrameFinished;
-            var pFrameFinished = MemorySegment.allocateNative(C_INT, session);
+            var pFrameFinished = arena.allocate(C_INT);
 
             while (av_read_frame(pFormatCtx, packet) >= 0) {
                 // Is this a packet from the video stream?
@@ -210,10 +232,10 @@ public class LibffmpegMain {
                         // Save the frame to disk
                         if (++i <= NUM_FRAMES_TO_CAPTURE) {
                             try {
-                                saveFrame(pFrameRGB, session, width, height, i);
+                                saveFrame(pFrameRGB, arena, width, height, i);
                             } catch (Exception exp) {
                                 exp.printStackTrace();
-                                throw new ExitException(1, "save frame failed for frame " + i);
+                                return new Exit("save frame failed for frame " + i, 1);
                             }
                         }
                      }
@@ -222,11 +244,6 @@ public class LibffmpegMain {
                  // Free the packet that was allocated by av_read_frame
                  av_free_packet(packet);
             }
-
-            throw new ExitException(0, "Goodbye!");
-        } catch (ExitException ee) {
-            System.err.println(ee.getMessage());
-            exitCode = ee.exitCode;
         } finally {
             // clean-up everything
 
@@ -254,10 +271,10 @@ public class LibffmpegMain {
             }
         }
 
-        System.exit(exitCode);
+        return new Exit("Goodbye!", 0);
     }
 
-    private static void saveFrame(MemorySegment frameRGB, MemorySession session,
+    private static void saveFrame(MemorySegment frameRGB, Arena arena,
             int width, int height, int iFrame)
             throws IOException {
         var header = String.format("P6\n%d %d\n255\n", width, height);
@@ -273,7 +290,7 @@ public class LibffmpegMain {
             // Write pixel data
             for (int y = 0; y < height; y++) {
                 // frameRGB.data[0] + y*frameRGB.linesize[0] is the pointer. And 3*width size of data
-                var pixelArray = MemorySegment.ofAddress(pdata.address() + y*linesize, 3*width, session);
+                var pixelArray = MemorySegment.ofAddress(pdata.address() + y*linesize, 3*width, arena);
                 // dump the pixel byte buffer to file
                 os.write(pixelArray.toArray(C_CHAR));
             }
