@@ -30,7 +30,7 @@
  */
 
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 import java.lang.foreign.SegmentAllocator;
 import org.sqlite.*;
 import static java.lang.foreign.MemorySegment.NULL;
@@ -38,14 +38,14 @@ import static org.sqlite.sqlite3_h.*;
 
 public class SqliteMain {
    public static void main(String[] args) throws Exception {
-        try (var session = MemorySession.openConfined()) {
+        try (var arena = Arena.ofConfined()) {
             // char** errMsgPtrPtr;
-            var errMsgPtrPtr = session.allocate(C_POINTER);
+            var errMsgPtrPtr = arena.allocate(C_POINTER);
 
             // sqlite3** dbPtrPtr;
-            var dbPtrPtr = session.allocate(C_POINTER);
+            var dbPtrPtr = arena.allocate(C_POINTER);
 
-            int rc = sqlite3_open(session.allocateUtf8String("employee.db"), dbPtrPtr);
+            int rc = sqlite3_open(arena.allocateUtf8String("employee.db"), dbPtrPtr);
             if (rc != 0) {
                 System.err.println("sqlite3_open failed: " + rc);
                 return;
@@ -57,7 +57,7 @@ public class SqliteMain {
             var dbPtr = dbPtrPtr.get(C_POINTER, 0);
 
             // create a new table
-            var sql = session.allocateUtf8String(
+            var sql = arena.allocateUtf8String(
                 "CREATE TABLE EMPLOYEE ("  +
                 "  ID INT PRIMARY KEY NOT NULL," +
                 "  NAME TEXT NOT NULL,"    +
@@ -74,7 +74,7 @@ public class SqliteMain {
             }
 
             // insert two rows
-            sql = session.allocateUtf8String(
+            sql = arena.allocateUtf8String(
                 "INSERT INTO EMPLOYEE (ID,NAME,SALARY) " +
                     "VALUES (134, 'Xyz', 200000.0); " +
                 "INSERT INTO EMPLOYEE (ID,NAME,SALARY) " +
@@ -95,8 +95,8 @@ public class SqliteMain {
             var callback = sqlite3_exec$callback.allocate((a, argc, argv, columnNames) -> {
                 System.out.println("Row num: " + rowNum[0]++);
                 System.out.println("numColumns = " + argc);
-                var argv_seg = MemorySegment.ofAddress(argv.address(), C_POINTER.byteSize() * argc, session);
-                var columnNames_seg = MemorySegment.ofAddress(columnNames.address(), C_POINTER.byteSize() * argc, session);
+                var argv_seg = MemorySegment.ofAddress(argv.address(), C_POINTER.byteSize() * argc, arena);
+                var columnNames_seg = MemorySegment.ofAddress(columnNames.address(), C_POINTER.byteSize() * argc, arena);
                 for (int i = 0; i < argc; i++) {
                      String name = columnNames_seg.getAtIndex(C_POINTER, i).getUtf8String(0);
                      String value = argv_seg.getAtIndex(C_POINTER, i).getUtf8String(0);
@@ -104,10 +104,10 @@ public class SqliteMain {
                      System.out.printf("%s = %s\n", name, value);
                 }
                 return 0;
-            }, session);
+            }, arena);
 
             // select query
-            sql = session.allocateUtf8String("SELECT * FROM EMPLOYEE");
+            sql = arena.allocateUtf8String("SELECT * FROM EMPLOYEE");
             rc = sqlite3_exec(dbPtr, sql, callback, NULL, errMsgPtrPtr);
 
             if (rc != 0) {
