@@ -29,7 +29,7 @@
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 import java.lang.foreign.SegmentAllocator;
 import static java.lang.foreign.MemorySegment.NULL;
 // import jextracted tcl 'header' class
@@ -53,8 +53,8 @@ public class TCLMain {
             puts "Full name: $name(first) $name(last)"
         """;
 
-        try (var session = MemorySession.openConfined()) {
-            var str = session.allocateUtf8String(script);
+        try (var arena = Arena.ofConfined()) {
+            var str = arena.allocateUtf8String(script);
             Tcl_Eval(interp, str);
         }
 
