@@ -21,9 +21,8 @@
  * questions.
  */
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import org.testng.annotations.Test;
 
 import java.util.concurrent.atomic.AtomicInteger;
@@ -48,31 +47,31 @@ import test.jextract.funcpointers.*;
 public class TestFuncPointerInvokers {
     @Test
     public void testStructFieldTypedef() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (Arena arena = Arena.ofConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            MemorySegment bar = Bar.allocate(session);
-            Bar.foo$set(bar, Foo.allocate((i) -> val.set(i), session));
-            Bar.foo(bar, session).apply(42);
+            MemorySegment bar = Bar.allocate(arena);
+            Bar.foo$set(bar, Foo.allocate((i) -> val.set(i), arena));
+            Bar.foo(bar, arena).apply(42);
             assertEquals(val.get(), 42);
         }
     }
 
     @Test
     public void testStructFieldFITypedef() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (Arena arena = Arena.ofConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            MemorySegment bar = Bar.allocate(session);
-            Bar.foo$set(bar, Foo.allocate((i) -> val.set(i), session));
-            Foo.ofAddress(Bar.foo$get(bar), session).apply(42);
+            MemorySegment bar = Bar.allocate(arena);
+            Bar.foo$set(bar, Foo.allocate((i) -> val.set(i), arena));
+            Foo.ofAddress(Bar.foo$get(bar), arena).apply(42);
             assertEquals(val.get(), 42);
         }
     }
 
     @Test
     public void testGlobalTypedef() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (Arena arena = Arena.ofConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            f$set(Foo.allocate((i) -> val.set(i), session));
+            f$set(Foo.allocate((i) -> val.set(i), arena));
             f().apply(42);
             assertEquals(val.get(), 42);
         }
@@ -80,41 +79,41 @@ public class TestFuncPointerInvokers {
 
     @Test
     public void testGlobalFITypedef() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (Arena arena = Arena.ofConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            f$set(Foo.allocate((i) -> val.set(i), session));
-            Foo.ofAddress(f$get(), session).apply(42);
+            f$set(Foo.allocate((i) -> val.set(i), arena));
+            Foo.ofAddress(f$get(), arena).apply(42);
             assertEquals(val.get(), 42);
         }
     }
 
     @Test
     public void testStructFieldFunctionPointer() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (Arena arena = Arena.ofConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            MemorySegment baz = Baz.allocate(session);
-            Baz.fp$set(baz, Baz.fp.allocate((i) -> val.set(i), session));
-            Baz.fp(baz, session).apply(42);
+            MemorySegment baz = Baz.allocate(arena);
+            Baz.fp$set(baz, Baz.fp.allocate((i) -> val.set(i), arena));
+            Baz.fp(baz, arena).apply(42);
             assertEquals(val.get(), 42);
         }
     }
 
     @Test
     public void testStructFieldFIFunctionPointer() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (Arena arena = Arena.ofConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            MemorySegment baz = Baz.allocate(session);
-            Baz.fp$set(baz, Baz.fp.allocate((i) -> val.set(i), session));
-            Baz.fp.ofAddress(Baz.fp$get(baz), session).apply(42);
+            MemorySegment baz = Baz.allocate(arena);
+            Baz.fp$set(baz, Baz.fp.allocate((i) -> val.set(i), arena));
+            Baz.fp.ofAddress(Baz.fp$get(baz), arena).apply(42);
             assertEquals(val.get(), 42);
         }
     }
 
     @Test
     public void testGlobalFunctionPointer() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (Arena arena = Arena.ofConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            fp$set(fp.allocate((i) -> val.set(i), session));
+            fp$set(fp.allocate((i) -> val.set(i), arena));
             fp().apply(42);
             assertEquals(val.get(), 42);
         }
@@ -122,19 +121,19 @@ public class TestFuncPointerInvokers {
 
     @Test
     public void testGlobalFIFunctionPointer() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (Arena arena = Arena.ofConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            fp$set(fp.allocate((i) -> val.set(i), session));
-            fp.ofAddress(fp$get(), session).apply(42);
+            fp$set(fp.allocate((i) -> val.set(i), arena));
+            fp.ofAddress(fp$get(), arena).apply(42);
             assertEquals(val.get(), 42);
         }
     }
 
     @Test
     public void testGlobalFIFunctionPointerAddress() {
-        try (MemorySession session = MemorySession.openConfined()) {
-            fp_addr$set(fp_addr.allocate((addr) -> MemorySegment.ofAddress(addr.address() + 1), session));
-            assertEquals(fp_addr.ofAddress(fp_addr$get(), session).apply(MemorySegment.ofAddress(42)), MemorySegment.ofAddress(43));
+        try (Arena arena = Arena.ofConfined()) {
+            fp_addr$set(fp_addr.allocate((addr) -> MemorySegment.ofAddress(addr.address() + 1), arena));
+            assertEquals(fp_addr.ofAddress(fp_addr$get(), arena).apply(MemorySegment.ofAddress(42)), MemorySegment.ofAddress(43));
         }
     }
 }
