@@ -21,8 +21,8 @@
  * questions.
  */
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import org.testng.annotations.Test;
 import test.jextract.test8246400.*;
 import static org.testng.Assert.assertEquals;
@@ -49,16 +49,16 @@ public class LibTest8246400Test {
     @Test
     public void testSegmentRegister() {
         MemorySegment sum = null;
-        try (MemorySession session = MemorySession.openConfined()) {
-            var v1 = Vector.allocate(session);
+        try (Arena arena = Arena.ofConfined()) {
+            var v1 = Vector.allocate(arena);
             Vector.x$set(v1, 1.0);
             Vector.y$set(v1, 0.0);
 
-            var v2 = Vector.allocate(session);
+            var v2 = Vector.allocate(arena);
             Vector.x$set(v2, 0.0);
             Vector.y$set(v2, 1.0);
 
-            sum = add(session, v1, v2);
+            sum = add(arena, v1, v2);
 
             assertEquals(Vector.x$get(sum), 1.0, 0.1);
             assertEquals(Vector.y$get(sum), 1.0, 0.1);
@@ -66,7 +66,7 @@ public class LibTest8246400Test {
             MemorySegment callback = cosine_similarity$dot.allocate((a, b) -> {
                 return (Vector.x$get(a) * Vector.x$get(b)) +
                     (Vector.y$get(a) * Vector.y$get(b));
-            }, session);
+            }, arena);
 
             var value = cosine_similarity(v1, v2, callback);
             assertEquals(value, 0.0, 0.1);
@@ -74,6 +74,6 @@ public class LibTest8246400Test {
             value = cosine_similarity(v1, v1, callback);
             assertEquals(value, 1.0, 0.1);
         }
-        assertTrue(!sum.session().isAlive());
+        assertTrue(!sum.scope().isAlive());
     }
 }
